--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
-  <title>fuck</title>
+  <title>Title Goes Here</title>
 </head>
 <body>
 
-<header></header>
+<header>
+Header Text
+</header>
 
 <div class="container">
   <section id="page-content"></section>
